--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content="Nutrisystem UI Style Guide">
 <title>Nutrisystem UI Style Guide</title>
-<link href="../css/bootstrap/bootstrap.min.css" rel=stylesheet>
+<link href="css/bootstrap/bootstrap.min.css" rel=stylesheet>
 <link href="css/docs.min.css" href=css/docs.min.css rel=stylesheet>
 <link rel=icon href=/favicon.ico>
 <script type="text/javascript" src="//use.typekit.net/hut7fbx.js"></script><script type="text/javascript"> try {     Typekit.load(); } catch (e) { } </script>
@@ -8698,7 +8698,8 @@ sagittis lacus vel augue laoreet rutrum faucibus."</span><span class=nt>&gt;</sp
       <a class=back-to-top href=#top> Back to top </a> </nav>
   </div>
 </div>
-<script src=https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js></script><!--<script>window.jQuery||document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>');</script>--><script src=js/bootstrap.min.js></script> 
+<script src=js/jquery-2.2.1.min.js></script>
+<script src=js/boostrap/bootstrap.min.js></script> 
 <script src=js/docs.min.js></script>
 </body>
 </html>
