--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <meta name=description content="Nutrisystem UI Style Guide">
 <title>Nutrisystem UI Style Guide</title>
 <link href="css/bootstrap/bootstrap.min.css" rel=stylesheet>
-<link href="css/docs.min.css" href=css/docs.min.css rel=stylesheet>
-<link rel=icon href=/favicon.ico>
+<link href="css/docs.min.css" rel=stylesheet>
 <script type="text/javascript" src="//use.typekit.net/hut7fbx.js"></script><script type="text/javascript"> try {     Typekit.load(); } catch (e) { } </script>
 </head>
 <body>
