reorganized files & folders

--- a/NS/style-guide.html
+++ b/NS/style-guide.html
@@ -7,7 +7,7 @@
 <meta name=description content="Nutrisystem UI Style Guide">
 <title>Nutrisystem UI Style Guide</title>
 <link href="css/bootstrap/bootstrap.min.css" rel=stylesheet>
-<link href="../style-guide/style-guide.css" rel=stylesheet>
+<link href="css/style-guide/style-guide.css" rel=stylesheet>
 <script type="text/javascript" src="//use.typekit.net/hut7fbx.js"></script><script type="text/javascript"> try {     Typekit.load(); } catch (e) { } </script>
 </head>
 <body>
